--- a/index.html
+++ b/index.html
@@ -412,7 +412,31 @@
                         <h3>Clarity gives you the blocks and <br>components you need to create a truly <br>professional website.</h3>
                     </div>
                     <div class="prt-3-5-1-2">
-
+                        <div class="d-flex justify-content-between">
+                            <div class="prt-3-5-1-2-1">
+                                <div class="txt-prt3">
+                                    <h5>COMPANY</h5>
+                                </div>
+                                <div class="list-txt-3">
+                                    <div><li>About</li></div>
+                                    <div><li>Features</li></div>
+                                    <div><li>Contact Us</li></div>
+                                    <div><li>Career</li></div>
+                                </div>
+                            </div>
+                            <div class="prt-3-5-1-2-2">
+                                <div class="txt-prt3">
+                                    <h5>HELP</h5>
+                                </div>
+                                <div class="list-txt-4">
+                                    <div><li>Customer Support</li></div>
+                                    <div><li>Delivery Details</li></div>
+                                    <div><li>Terms & Conditions</li></div>
+                                    <div><li>Privacy Policy</li></div>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="prt-3-5-1-3">
                         <h3>NEWSLETTER</h3>
