--- a/index.html
+++ b/index.html
@@ -239,7 +239,117 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="bx322-2">
+                                <h3>Based on your prefference</h3>
+                                <div class="bx322-2-1">
+                                    <div class="bx322-2-1-1">
+                                        <div class="d-flex">
+                                            <div class="bx322211-1">
+                                                <div class="bx322211-1-1">
+                                                    <div class="d-flex">
+                                                        <img src="img/Frame 106.png" alt="">
+                                                        <div class="bxxxxx-1">
+                                                            <h5>Sravani Reddykonda</h5>
+                                                            <h6>26 yrs | 5ft 6in</h6>
+                                                            <h6>Phn - 912177</h6>
+                                                            <h6>Mail - sravani@gmail.com</h6>
+                                                            <h6>Caste</h6>
+                                                            <h6>Occupation</h6>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="bx322211-1">
+                                                <div class="bx322211-1-1">
+                                                    <div class="d-flex">
+                                                        <img src="img/Frame 107.png" alt="">
+                                                        <div class="bxxxxx-1">
+                                                            <h5>Sravani Reddykonda</h5>
+                                                            <h6>26 yrs | 5ft 6in</h6>
+                                                            <h6>Phn - 912177</h6>
+                                                            <h6>Mail - sravani@gmail.com</h6>
+                                                            <h6>Caste</h6>
+                                                            <h6>Occupation</h6>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="bx322-2-1-1">
+                                        <div class="d-flex">
+                                            <div class="bx322211-1">
+                                                <div class="bx322211-1-1">
+                                                    <div class="d-flex">
+                                                        <img src="img/108.png" alt="">
+                                                        <div class="bxxxxx-1">
+                                                            <h5>Sravani Reddykonda</h5>
+                                                            <h6>26 yrs | 5ft 6in</h6>
+                                                            <h6>Phn - 912177</h6>
+                                                            <h6>Mail - sravani@gmail.com</h6>
+                                                            <h6>Caste</h6>
+                                                            <h6>Occupation</h6>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="bx322211-1">
+                                                <div class="bx322211-1-1">
+                                                    <div class="d-flex">
+                                                        <img src="img/109.png" alt="">
+                                                        <div class="bxxxxx-1">
+                                                            <h5>Sravani Reddykonda</h5>
+                                                            <h6>26 yrs | 5ft 6in</h6>
+                                                            <h6>Phn - 912177</h6>
+                                                            <h6>Mail - sravani@gmail.com</h6>
+                                                            <h6>Caste</h6>
+                                                            <h6>Occupation</h6>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <h3 id="head3">Based on your prefference</h3>
+                                <div class="bx322-2-2">
+                                    <div class="d-flex">
+                                        <div class="bx322211-1">
+                                            <div class="bx322211-1-1">
+                                                <div class="d-flex">
+                                                    <img src="img/110.png" alt="">
+                                                    <div class="bxxxxx-1">
+                                                        <h5>Sravani Reddykonda</h5>
+                                                        <h6>26 yrs | 5ft 6in</h6>
+                                                        <h6>Phn - 912177</h6>
+                                                        <h6>Mail - sravani@gmail.com</h6>
+                                                        <h6>Caste</h6>
+                                                        <h6>Occupation</h6>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="bx322211-1">
+                                            <div class="bx322211-1-1">
+                                                <div class="d-flex">
+                                                    <img src="img/111.png" alt="">
+                                                    <div class="bxxxxx-1">
+                                                        <h5>Sravani Reddykonda</h5>
+                                                        <h6>26 yrs | 5ft 6in</h6>
+                                                        <h6>Phn - 912177</h6>
+                                                        <h6>Mail - sravani@gmail.com</h6>
+                                                        <h6>Caste</h6>
+                                                        <h6>Occupation</h6>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -516,7 +626,7 @@
                         </div>
                         <div class="prt-3-5-1-3">
                             <h3>NEWSLETTER</h3>
-                            <input placeholder="Enter your email address" >
+                            <input type="email" placeholder="Enter your email address" >
                             <button>Subscribe Now</button>
                         </div>
                     </div>
