changes in html

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                                     select age
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">18-25</a></li>
+                                    <li><a class="dropdown-item" href="#">26-30</a></li>
+                                    <li><a class="dropdown-item" href="#">31 and above</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -121,9 +121,9 @@
                                     Select religion
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">male</a></li>
-                                    <li><a class="dropdown-item" href="#">female</a></li>
-                                    <li><a class="dropdown-item" href="#">other</a></li>
+                                    <li><a class="dropdown-item" href="#">Hindu</a></li>
+                                    <li><a class="dropdown-item" href="#">Christian</a></li>
+                                    <li><a class="dropdown-item" href="#">Muslim</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -137,9 +137,10 @@
                                     choose mother tounge
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">Telugu</a></li>
+                                    <li><a class="dropdown-item" href="#">Hindi</a></li>
+                                    <li><a class="dropdown-item" href="#">English</a></li>
+                                    <li><a class="dropdown-item" href="#">other</a></li>
                                 </ul>
                             </div>
                         </div>
