changes of html

--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
                                             Rahgav
                                         </button>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">male</a></li>
-                                            <li><a class="dropdown-item" href="#">female</a></li>
-                                            <li><a class="dropdown-item" href="#">other</a></li>
+                                            <li><a class="dropdown-item" href="#">Rahgav</a></li>
+                                            <li><a class="dropdown-item" href="#">Shwetha</a></li>
+                                            <li><a class="dropdown-item" href="#">Sravani Reddykonda</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -519,9 +519,9 @@
                                             male or female
                                         </button>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            <li><a class="dropdown-item" href="#">Male</a></li>
+                                            <li><a class="dropdown-item" href="#">Female</a></li>
+                                            <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -533,15 +533,7 @@
                                         <p>First Name</p>
                                     </div>
                                     <div class="dropdown me-1">
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                            data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
-                                            Your name
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">male</a></li>
-                                            <li><a class="dropdown-item" href="#">female</a></li>
-                                            <li><a class="dropdown-item" href="#">other</a></li>
-                                        </ul>
+                                        <input type="text" placeholder="enter your first name">
                                     </div>
                                 </div>
                                 <div class="crd-11">
@@ -549,15 +541,7 @@
                                         <p>Last Name</p>
                                     </div>
                                     <div class="dropdown me-1">
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                            data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
-                                            Your name
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
+                                        <input type="text" placeholder="enter your last name">
                                     </div>
                                 </div>
                             </div>
@@ -570,7 +554,7 @@
                                     <div class="dropdown me-1">
                                         <button type="button" class="btn btn-secondary dropdown-toggle"
                                             data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
-                                            Male or Female
+                                            number
                                         </button>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="#">male</a></li>
